--- a/package.json
+++ b/package.json
@@ -9,9 +9,10 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "lucide-react": "^0.483.0",
+    "next": "14.2.25",
     "react": "^18",
-    "react-dom": "^18",
-    "next": "14.2.25"
+    "react-dom": "^18"
   },
   "devDependencies": {
     "postcss": "^8",
